syntax = "proto3";
import "google/protobuf/empty.proto";
option csharp_namespace = "MessageQueueGRPC";

package messagequeue;
	
service MessageQueueSvc{
	rpc SendMessage(Message) returns (google.protobuf.Empty);
	rpc DeleteMessage(Id) returns (Message);
	rpc ListMessages(google.protobuf.Empty) returns (stream Message);
}

message Message {
	int32 id = 1;
	string text = 2;
}

message Id{
    int32 id = 1;
}
